; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_slash_adjust.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_msdos.c_slash_adjust.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@psepcN = common dso_local global i8 0, align 1
@psepc = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slash_adjust(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  br label %3

3:                                                ; preds = %17, %1
  %4 = load i8*, i8** %2, align 8
  %5 = load i8, i8* %4, align 1
  %6 = icmp ne i8 %5, 0
  br i1 %6, label %7, label %20

7:                                                ; preds = %3
  %8 = load i8*, i8** %2, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = load i8, i8* @psepcN, align 1
  %12 = sext i8 %11 to i32
  %13 = icmp eq i32 %10, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %7
  %15 = load i8, i8* @psepc, align 1
  %16 = load i8*, i8** %2, align 8
  store i8 %15, i8* %16, align 1
  br label %17

17:                                               ; preds = %14, %7
  %18 = load i8*, i8** %2, align 8
  %19 = call i32 @mb_ptr_adv(i8* %18)
  br label %3

20:                                               ; preds = %3
  ret void
}

declare dso_local i32 @mb_ptr_adv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
